[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook_eda_tools"
#version = "0.0.1"
dynamic = ["version"]
authors = [
  { name="Tak Koyanagi", email="takaoki.koyanagi@gmail.com" },
]
description = "package to help explore datae"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
